k8s/apps/degoog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: degoog
  labels:
    app: degoog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: degoog
  template:
    metadata:
      labels:
        app: degoog
    spec:
      containers:
        - name: degoog
          image: ghcr.io/degoog-org/degoog:1.0.0@sha256:a3ad42b66cdbf4432aa22c1c8c0520e01070596aa10367b0e419a1413f4d15f1
          ports:
            - containerPort: 4444
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETUID
                - SETGID
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: degoog-data
