k8s/apps/degoog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: degoog
spec:
  selector:
    app: degoog
  ports:
    - port: 4444
      targetPort: 4444
