k8s/apps/degoog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: degoog
spec:
  ingressClassName: traefik
  rules:
    - host: search.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: degoog
                port:
                  number: 4444
